--- a/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
+++ b/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
@@ -17,17 +17,17 @@
     <form [formGroup]="studentForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="fullName">Full Name</label>
-        <input type="text" id="fullName" class="form-control" formControlName="fullName">
+        <input type="text" id="fullName" class="form-control" formControlName="fullName" placeholder="Enter Full Name">
       </div>
 
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" id="email" class="form-control" formControlName="email">
+        <input type="email" id="email" class="form-control" formControlName="email" placeholder="Enter Email Id">
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" formControlName="password">
+        <input type="password" id="password" class="form-control" formControlName="password" Enter your Password>
       </div>
 
       <div class="text-center">
