--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -64,19 +64,25 @@
     </section>
    </div>
 
-    <footer class="footer">
-  <div>
-    &copy; 2025 RHS. All rights reserved.
-    |
-    <a href="#">Privacy Policy</a>
-    |
-    <a href="#">Terms of Service</a>
-  </div>
-  <div>
- <a href="https://www.instagram.com/" class="nav-link">📷 </a>
-  <a href="https://www.facebook.com/" class="nav-link">📘 </a>
-   <a href="https://x.com/" class="nav-link">🐦 </a>
-  </div>
-</footer>
 
-</div>
+  <footer class="footer" style="text-align: center; padding: 20px; background-color: #1c1c1e;">
+    <div style="margin-bottom: 10px;">
+      &copy; 2025 RHS. All rights reserved.
+      |
+      <a href="#">Privacy Policy</a>
+      |
+      <a href="#">Terms of Service</a>
+    </div>
+    <div>
+      <a href="https://www.instagram.com/" class="nav-link" target="_blank" style="margin: 0 10px;">
+        <i class="fab fa-instagram" style="font-size: 24px; color: #E1306C;"></i>
+      </a>
+      <a href="https://www.facebook.com/" class="nav-link" target="_blank" style="margin: 0 10px;">
+        <i class="fab fa-facebook" style="font-size: 24px; color: #1877F2;"></i>
+      </a>
+      <a href="https://x.com/" class="nav-link" target="_blank" style="margin: 0 10px;">
+        <i class="fab fa-x-twitter" style="font-size: 24px; color: #d1c6c6;"></i>
+      </a>
+    </div>
+  </footer>
+
