--- a/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
+++ b/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
@@ -27,7 +27,7 @@
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" formControlName="password" Enter your Password>
+        <input type="password" id="password" class="form-control" formControlName="password" placeholder="Enter your Password" >
       </div>
 
       <div class="text-center">
