--- a/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
+++ b/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
@@ -1,37 +1,66 @@
-   <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-     <span class="navbar-brand mb-0 h1">Student Portal</span>
-      <button class="btn btn-outline-primary" (click)="goHome()">Home</button>
-    </div>
-   </nav>
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">Student Portal</span>
+    <button class="btn btn-outline-primary" (click)="goHome()">Home</button>
+  </div>
+</nav>
 
 <div class="background-wrapper">
-  
-
   <div class="form-container" @fadeSlideIn>
-
     <img src="/images/RHSlogo.jpg" alt="Logo" class="form-logo" />
-
     <h2 class="form-title">Student Registration</h2>
-    
+
     <form [formGroup]="studentForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="fullName">Full Name</label>
-        <input type="text" id="fullName" class="form-control" formControlName="fullName" placeholder="Enter Full Name">
+        <input
+          type="text"
+          id="fullName"
+          class="form-control"
+          formControlName="fullName"
+          placeholder="Enter Full Name"
+        />
+        <div class="text-danger" *ngIf="fullName?.touched && fullName?.invalid">
+          Full Name is required.
+        </div>
       </div>
 
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" id="email" class="form-control" formControlName="email" placeholder="Enter Email Id">
+        <input
+          type="email"
+          id="email"
+          class="form-control"
+          formControlName="email"
+          placeholder="Enter Email Id"
+        />
+        <div class="text-danger" *ngIf="email?.touched && email?.errors">
+          <div *ngIf="email?.errors?.['required']">Email is required.</div>
+          <div *ngIf="email?.errors?.['email']">Email must be valid.</div>
+        </div>
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" formControlName="password" placeholder="Enter your Password" >
+        <input
+          type="password"
+          id="password"
+          class="form-control"
+          formControlName="password"
+          placeholder="Enter your Password"
+        />
+        <div class="text-danger" *ngIf="password?.touched && password?.errors">
+          <div *ngIf="password?.errors?.['required']">Password is required.</div>
+          <div *ngIf="password?.errors?.['minlength']">
+            Password must be at least 6 characters.
+          </div>
+        </div>
       </div>
 
       <div class="text-center">
-        <button type="submit" class="btn btn-primary" [disabled]="studentForm.invalid">Register</button>
+        <button type="submit" class="btn btn-primary" [disabled]="studentForm.invalid">
+          Register
+        </button>
       </div>
     </form>
   </div>
