--- a/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.html
+++ b/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.html
@@ -31,7 +31,7 @@
   <div class="courses-section">
     <h2>Your Created Courses</h2>
     <div class="course-cards">
-      <div class="course-card" *ngFor="let course of courses">
+      <div class="course-card" *ngFor="Let course of courses">
         <h3>{{ course.courseName }}</h3>
         <p>{{ course.description }}</p>
         <span>ID: {{ course.courseId }}</span>
