--- a/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.css
@@ -30,7 +30,7 @@ body {
 
 .logout-btn {
   background: #f44336;
-  color: #fff;
+  color: #d9f333;
   padding: 8px 16px;
   font-weight: 600;
   border: none;
@@ -51,7 +51,7 @@ body {
 }
 
 .card {
-  background: rgba(163, 97, 97, 0.1);
+  background: rgba(117, 154, 219, 0.1);
   border-radius: 15px;
   padding: 25px;
   width: 320px;
