--- a/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.css
@@ -110,7 +110,7 @@ body {
   border-radius: 12px;
   padding: 20px;
   width: 280px;
-  color: #050000;
+  color: #da2929;
   box-shadow: 0 0 10px #000000ef;
   transition: transform 0.3s;
 }
