--- a/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
+++ b/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
@@ -4,7 +4,7 @@
     <button class="btn btn-outline-primary" (click)="goHome()">Home</button>
   </div>
 </nav>
-
+<!-- <h1>here is logo</h1> -->
 <div class="background-wrapper">
   <div class="form-container" @fadeSlideIn>
     <img src="/images/RHSlogo.jpg" alt="Logo" class="form-logo" />
