--- a/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.css
@@ -79,8 +79,8 @@ body {
   width: 100%;
   padding: 10px;
   margin-top: 10px;
-  background: #4caf50;
-  color: white;
+  background: #4b94c5;
+  color: pink;
   border: none;
   font-weight: bold;
   border-radius: 10px;
@@ -106,11 +106,11 @@ body {
 }
 
 .course-card {
-  background: rgba(146, 181, 160, 0.15);
+  background: rgba(126, 212, 160, 0.15);
   border-radius: 12px;
   padding: 20px;
   width: 280px;
-  color: #da2929;
+  color: #337daf;
   box-shadow: 0 0 10px #000000ef;
   transition: transform 0.3s;
 }
