--- a/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.html
+++ b/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.html
@@ -6,7 +6,7 @@
 
   <div class="section-container">
     <div class="card">
-      <h2>Create Course</h2>
+      <h2>Create Courses</h2>
       <input [(ngModel)]="newCourse.courseName" placeholder="Course Name" />
       <textarea [(ngModel)]="newCourse.description" placeholder="Description"></textarea>
       <button (click)="createCourse()">Create Course</button>
