--- a/projects/ravi-lms/src/app/Dashboard/student-dashboard/student-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/student-dashboard/student-dashboard.component.css
@@ -11,7 +11,7 @@
 
 /* Header */
 .dashboard-header {
-  background: #151617;
+  background: red;
   color: #fff;
   padding: 20px 30px;
   display: flex;
