--- a/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/teacher-dashboard/teacher-dashboard.component.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Poppins', sans-serif;
   background: url('/images/bg-blur4.jpg') no-repeat center center fixed;
   background-size: cover;
-  color: #23c567;
+  color: #0cf06b;
 }
 
 .dashboard-container {
