--- a/projects/ravi-lms/src/app/Component/login/login.component.html
+++ b/projects/ravi-lms/src/app/Component/login/login.component.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="text-center">
-        <button type="submit" class="btn btn-primary" [disabled]="!email || !password">login</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!email || !password">Login</button>
       </div>
     </form>
   </div>
