services student interface chnage 1

--- a/projects/ravi-lms/src/app/Dashboard/student-dashboard/student-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/student-dashboard/student-dashboard.component.css
@@ -11,7 +11,7 @@
 
 /* Header */
 .dashboard-header {
-  background: red;
+  background: rgb(28, 22, 22);
   color: #fff;
   padding: 20px 30px;
   display: flex;
