--- a/projects/ravi-lms/src/app/Component/teacher-register/teacher-register.component.css
+++ b/projects/ravi-lms/src/app/Component/teacher-register/teacher-register.component.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+   
 }
 
 /* Container box */
@@ -16,6 +17,8 @@
   border-radius: 12px;
   width: 100%;
   max-width: 400px;
+  max-height: 85vh; /* Add this line */
+  overflow-y: auto; /* Enable scrolling inside the box if needed */
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8);
 }
 
@@ -58,6 +61,7 @@
 /* Submit button */
 .text-center {
   text-align: center;
+  
 }
 
 .btn-primary {
@@ -126,4 +130,5 @@
   font-size: 0.85rem;
   color: #d9534f;
 }
+
 
