--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -39,7 +39,7 @@
     <section id="best-teachers" style="padding: 50px; ">
         <div style="max-width: 900px; margin: 0 auto; text-align: center;">
           <h2 style="font-size: 2.5rem; margin-bottom: 20px;">Who We Are</h2>
-          <p style="font-size: 1.2rem; color: #1414c3; line-height: 1.8;">
+          <p style="font-size: 1.5rem; color: #0a0b0b; line-height: 1.8;">
             Our Learning Management System (LMS) is designed to connect students with the best educators in the industry. 
             After teacher registration, admin approval is required to activate accounts. Once approved, teachers can create 
             courses and assignments directly from their dashboard.
@@ -48,7 +48,7 @@
             Students can register and, upon approval, gain access to courses, submit assignments, and track their learning 
             progress. The LMS ensures an organized, role-based experience for admins, teachers, and students alike.
           </p> -->
-          <p style="font-size: 1.2rem; color: #0c0000; line-height: 1.8;">
+          <p style="font-size: 1.5rem; color: #0c0000; line-height: 1.8;">
             Our platform empowers teachers with tools to manage educational content efficiently and helps students engage with 
             their learning journey in a structured, user-friendly environment.
           </p>
