--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -53,7 +53,7 @@
             their learning journey in a structured, user-friendly environment.
           </p>
          </div>
-          <h2>LMS Website Designer</h2>
+          <h2>LMS Designer</h2>
           <div class="teachers-row">
            <div class="teacher-card" *ngFor="let teacher of bestTeachers">
           <img [src]="teacher.image" [alt]="teacher.name">
