--- a/projects/ravi-lms/src/app/components/home/home.component.css
+++ b/projects/ravi-lms/src/app/components/home/home.component.css
@@ -86,7 +86,7 @@ html {
 
 /* Adjust margin to remove extra space from glass card */
 .glass-card {
-  background: rgba(72, 75, 75, 0.836);
+  background: rgba(141, 146, 146, 0.836);
   border-radius: 20px;
   padding: 40px;
   max-width: 700px;
@@ -97,6 +97,34 @@ html {
   box-shadow: 0 8px 32px rgb(1, 0, 0);
   margin: 0; /* remove margin */
 }
+.glass-card1{
+background: rgba(141, 146, 146, 0.836);
+  border-radius: 20px;
+  padding: 40px;
+  max-width: 900px;
+  width: 90%;
+  backdrop-filter: blur(10px);
+  color: #090a09;
+  text-align: center;
+  box-shadow: 0 8px 32px rgb(1, 0, 0);
+  margin: 0; /* remove margin */
+   margin-bottom: 40px;
+}
+
+.para1{
+  margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: 700;
+  color: #070707;
+}
+
+.para2{
+  margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: 700;
+  color: #070707;
+}
+
 .logo {
   width: 100px;
   margin-bottom: 15px;
@@ -148,6 +176,7 @@ html {
   margin-top: 60px;
   color: black;
   text-align: center;
+   margin-bottom: 90px;
 }
 
 .best-courses-section h2 {
@@ -188,7 +217,7 @@ html {
 
 /* Teachers Section */
 .best-teachers-section {
-  margin-top: 70px;
+  margin-top: 30px;
   text-align: center;
   color: #7e1a1a;
 }
