--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -4,9 +4,9 @@
     <span class="nav-title"> LEARNING MANAGMENT SYSTEM </span>
   </div>
   <div class="nav-right">
-    <a href="#" class="nav-link">Home</a>
-    <a href="#glass-card2" class="nav-link">About</a> 
-    <a href="#best-teachers" class="nav-link">Creatror</a>
+    <a href="#" class="nav-link">🏠Home</a>
+    <a href="#glass-card2" class="nav-link">ℹ️About</a> 
+    <a href="#best-teachers" class="nav-link">👨‍💻Creators</a>
   </div>
 
 </nav>
