--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -1,15 +1,23 @@
 <nav class="navbar">
   <div class="nav-left">
     <img src="/images/RHSlogo.jpg" alt="Logo" class="nav-logo">
-    <span class="nav-title"> LEARNING MANAGMENT SYSTEM </span>
+    <span class="nav-title"> LEARNING MANAGEMENT SYSTEM </span>
   </div>
   <div class="nav-right">
-    <a href="#" class="nav-link">🏠Home</a>
-    <a href="#glass-card2" class="nav-link">ℹ️About</a> 
-    <a href="#best-teachers" class="nav-link">👨‍💻Creators</a>
+    <a href="#" class="nav-link">
+      <img src="https://img.icons8.com/ios-filled/24/ffffff/home.png" alt="Home Icon" class="nav-icon">
+    </a>
+    <a href="#glass-card2" class="nav-link">
+      <img src="https://img.icons8.com/ios-filled/24/ffffff/info.png" alt="About Icon" class="nav-icon">
+    </a> 
+    <a href="#best-teachers" class="nav-link">
+      <img src="https://img.icons8.com/ios-filled/24/ffffff/developer.png" alt="Creators Icon" class="nav-icon">
+    </a>
   </div>
-
 </nav>
+
+
+
 <!-- <h1>this our page</h1> -->
 
 <!-- Background Wrapper -->
