--- a/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
+++ b/projects/ravi-lms/src/app/Component/student-register/student-register.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1">Student Portal</span>
-    <button class="btn btn-outline-primary" (click)="goHome()">Home</button>
+    <button class="btn btn-outline-primary" (click)="goHome()">🏠Home</button>
   </div>
 </nav>
 
