--- a/projects/ravi-lms/src/app/Component/login/login.component.html
+++ b/projects/ravi-lms/src/app/Component/login/login.component.html
@@ -2,7 +2,7 @@
    <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
      <span class="navbar-brand mb-0 h1">Login Portal</span>
-      <button class="btn btn-outline-primary" (click)="goHome()">Home</button>
+      <button class="btn btn-outline-primary" (click)="goHome()">🏠Home</button>
     </div>
    </nav>
 
