--- a/projects/ravi-lms/src/app/components/home/home.component.css
+++ b/projects/ravi-lms/src/app/components/home/home.component.css
@@ -112,19 +112,19 @@ html {
 
 /* Adjust margin to remove extra space from glass card */
 .glass-card {
-  background: rgba(101, 101, 101, 0.836);
+  background: rgba(198, 225, 195, 0.836);
   border-radius: 20px;
   padding: 40px;
   max-width: 700px;
   width: 90%;
   backdrop-filter: blur(1px);
-  color: #e4eae7;
+  color: #101010;
   text-align: center;
   box-shadow: 0 8px 32px rgb(1, 0, 0);
   margin: 0; /* remove margin */
 }
 .glass-card1{
- background: rgba(101, 101, 101, 0.836);
+background: rgba(198, 225, 195, 0.836);
   border-radius: 20px;
   padding: 40px;
   max-width: 900px;
