--- a/projects/ravi-lms/src/app/components/home/home.component.html
+++ b/projects/ravi-lms/src/app/components/home/home.component.html
@@ -37,10 +37,10 @@
   <div class="best-courses-section text-center">   
     <h2>Our Best Courses</h2>
     <div class="courses-row">
-      <div class="course-card" *ngFor="let course of bestCourses">
-      <img [src]="course.image" [alt]="course.name" class="course-img" (click)="gotoFullstack()" />
-      <div class="course-name">{{ course.name }}</div>
-    </div>
+        <div class="course-card" *ngFor="let course of bestCourses">
+          <img [src]="course.image" [alt]="course.name" class="course-img" (click)="gotoCourse(course.route)" />
+        <div class="course-name">{{ course.name }}</div>
+       </div>
     </div>
   </div>
 
