--- a/projects/ravi-lms/src/app/Courses/ai/ai.component.html
+++ b/projects/ravi-lms/src/app/Courses/ai/ai.component.html
@@ -9,7 +9,7 @@
     <div class="hero-text">
       <h1>Artificial Intelligence Mastery</h1>
       <p>Explore the world of AI — from foundations to advanced machine learning, deep learning, and real-world AI projects.</p>
-      <a href="#" class="enroll-btn">Enroll Now</a>
+      <button routerLink='/StudentRegister' class="enroll-btn">Enroll Now</button>
     </div>
   </section>
 
