--- a/projects/ravi-lms/src/app/Courses/fullstack/fullstack.component.html
+++ b/projects/ravi-lms/src/app/Courses/fullstack/fullstack.component.html
@@ -2,7 +2,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="/images/bg-blur9.jpg" alt="Fullstack Course Banner" class="hero-image" />
+    <img src="/images/fullsatck.jpg" alt="Fullstack Course Banner" class="hero-image" />
     <a routerLink="/home" class="home-button">
       <img src="https://img.icons8.com/ios-filled/24/ffffff/home.png" alt="Home" />
     </a>
@@ -53,6 +53,18 @@
         <h3>Deployment & Projects</h3>
         <p>Deploy fullstack apps to cloud and GitHub, with CI/CD and production-ready practices.</p>
       </div>
-    </div>
+         <div class="module-card">
+        <img src="/images/Auth.jpg" alt="Authentication & Security">
+        <h3>Authentication & Security</h3>
+        <p>Implement secure login systems using JWT, OAuth, and best practices for protecting APIs and frontend routes.</p>
+        </div>
+        <div class="module-card">
+            <img src="/images/tools.jpg" alt="State Management">
+            <h3>State Management & Advanced UI</h3>
+            <p>Manage complex app state using NgRx or RxJS in Angular, and build dynamic, responsive interfaces.</p>
+        </div>
+      </div>
+ 
+
   </section>
 </div>
